# transcription-api

./: .gitignore  Dockerfile  Dockerfile.pytorch  Makefile  PERFORMANCE_OPTIMIZATIONS.md  README.md  build.sh  docker-compose.yml  entrypoint.sh  generate_proto.py  requirements.txt
examples/: test_rest_api.py
examples/rust-client/: Cargo.toml  README.md  build.rs  transcribe_video_call.sh
examples/rust-client/src/: file_transcribe.rs  live_transcribe.rs  realtime_playback.rs  stdin_transcribe.rs  stream_transcribe.rs  system_audio_transcribe.rs
proto/: transcription.proto
src/: rest_api.py  transcription_server.py
