[package]
name = "transcription-client"
version = "0.1.0"
edition = "2021"

[dependencies]
# gRPC and Protocol Buffers
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"

# Audio handling
hound = "3.5"  # WAV file reading/writing
cpal = "0.15"  # Cross-platform audio capture
rodio = "0.17"  # Audio playback

# Utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.4", features = ["derive"] }
futures-util = "0.3"

[build-dependencies]
tonic-build = "0.10"

[[bin]]
name = "stream-transcribe"
path = "src/stream_transcribe.rs"

[[bin]]
name = "file-transcribe"
path = "src/file_transcribe.rs"

[[bin]]
name = "live-transcribe"
path = "src/live_transcribe.rs"

[[bin]]
name = "realtime-playback"
path = "src/realtime_playback.rs"

[[bin]]
name = "system-audio"
path = "src/system_audio_transcribe.rs"

[[bin]]
name = "stdin-transcribe"
path = "src/stdin_transcribe.rs"